# apps

./: CLAUDE.md
.claude/: settings.json
.claude/skills/: niche-brainstorm  niche-report  niche-research
.github/: CODEOWNERS
ai-notecards/: AGENTS.md  CLAUDE.md  README.md  SOUL.md  ideas.md  package.json  prd.json  prelaunch-audit-prompt-v1.md
ai-notecards/client/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
ai-notecards/docs/: INSTITUTIONAL-LEARNINGS.md
ai-notecards/ios/: project.yml
ai-notecards/mobile/: .env.example  .gitignore  CLAUDE.md  app.config.js  app.json  package-lock.json  package.json  vitest.config.ts
ai-notecards/scripts/: generate-assets.mjs  inspect-mobile-config.mjs
ai-notecards/server/: .env.example  package-lock.json  package.json
ai-notecards/todos/: 004-pending-p1-pii-scrub-incomplete-on-deletion.md  005-pending-p1-jsonb-shallow-merge-loses-notifications.md  007-pending-p2-authenticate-middleware-stateful-conversion.md  008-pending-p2-export-n-plus-1-query.md  011-pending-p2-password-hash-in-user-select.md  012-pending-p2-split-settings-routes.md  014-pending-p2-avatar-extension-change-orphans-file.md  042-pending-p3-seller-deck-update-push.md  (+19 more)
research/: indie-ios-app-playbook.md  ios-app-marketplace-breakdown.md
research/tools/: app_discovery.py  appstore_autocomplete.py  pyproject.toml  reddit_miner.py  review_miner.py  shared.py  trends_checker.py
research/tools/niche_research_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
trade-journal/: CLAUDE.md
(+554 files in other folders)
